compiler/pernixc_test/src/snapshot/snapshots/snapshot__module_tree__not_found__main.pnx.snap
---
source: compiler/pernixc_test/src/snapshot/mod.rs
expression: assert_string
---
stderr:
error: failed to load the source file for the submodule
  ╭─ module_tree/not_found/main.pnx:1:15
  │
1 │ public module notFound
  │               ^^^^^^^^
  │
  = failed to load the source file for the submodule at `module_tree/not_found/notFound.pnx`: No such file or directory (os error 2)



stdout:
